# qxDOS

./: .gitignore  CLAUDE.md  PRIVACY.md  README.md  RIGHTS.md  project.yml  todo.txt
.github/workflows/: release.yml
disk-content/freedos/: CREDITS.TXT  README.TXT  SOURCE.TXT
disk-content/licenses/: MIT.TXT
disk-content/msdos/: CREDITS.TXT  README.TXT  SOURCE.TXT
docs/: main-thread-checker.md  restart-static-state.md
dosbox-ios/: CMakeLists.txt  dosbox_bridge.cpp  dosbox_bridge.h  dosbox_config.h  imgmount_fix.cpp  int_e0_hostio.cpp  test_boot.cpp  vcpkg.json
dosbox-ios/stubs/: ethernet_slirp_stub.cpp  fluidsynth_stub.cpp  serial_ipx_stub.cpp  webserver_stub.cpp
dosbox-ios/stubs/slirp/: libslirp.h
dosbox-ios/triplets/: arm64-ios.cmake
emu88/: dos_bios.cc  dos_dpmi.cc  dos_io.h  dos_machine.cc  dos_machine.h  emu88.cc  emu88.h  emu88_fpu.cc  emu88_mem.cc  emu88_mem.h  emu88_pmode.cc  emu88_trace.h  emu88_types.h  ne2000.cc  ne2000.h  vga_font_8x16.h
iosFreeDOS/: iosFreeDOSApp.swift
iosFreeDOS/Bridge/: DOSEmulator.h  DOSEmulator.mm
iosFreeDOS/Resources/: disks.xml  help_freedos_commands.md
iosFreeDOS/Views/: ContentView.swift  EmulatorViewModel.swift  MachineConfig.swift  TerminalView.swift
qxDOS/: qxDOS-Bridging-Header.h  qxDOSApp.swift
qxDOS/Assets.xcassets/AppIcon.appiconset/: Contents.json
qxDOS/Assets.xcassets/AppLogo.imageset/: Contents.json
qxDOS/Bridge/: DOSEmulator.h  DOSEmulator.mm  Emu88Emulator.h  Emu88Emulator.mm  Emu88SlirpNet.h  Emu88SlirpNet.mm
qxDOS/Resources/: help_about_freedos.md  help_disk_images.md  help_index.json  help_networking.md  help_touch_controls.md
qxDOS/Views/: ContentView.swift  EmulatorViewModel.swift  HelpView.swift  MachineConfig.swift  TerminalView.swift
qxDOS/Views/TouchControls/: ActionButtonView.swift  DPadView.swift  StickView.swift  TouchControlEditorView.swift  TouchControlLayout.swift  TouchControlsOverlay.swift
release_assets/: disks.xml  help_file_transfer.md  help_index.json  help_quick_start.md
scripts/: build_freedos_floppy.sh  build_hdd.sh  build_msdos_floppy.sh  build_msdos_hd.sh  build_starter_disk.sh  check_disks.sh  gen_icon.py  publish_disks.sh  update_catalog.sh
